--- a/fromsarda/index.html
+++ b/fromsarda/index.html
@@ -19,8 +19,10 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
     </div>
 
     <script>
-      ucapan = ``;
-      musik = ``;
+      ucapan = `happy 1st anniversary, love.
+      i love you in every universe 
+      i'm fucking love you.`;
+      musik = `musik.mp3`;
       nomorWhatsapp = ``;
       idTelegram = ``;
 
@@ -28,3 +30,4 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
     </script>
   </body>
 </html>
+
