--- a/fromsarda/index.html
+++ b/fromsarda/index.html
@@ -20,8 +20,10 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
 
     <script>
       ucapan = `happy 1st anniversary, love.
+      thank you for always choose me even in your bad way.
+      when i see flowers, it reminds me of you. you're my pretty-side n my best thing i ever had.
       i love you in every universe 
-      i'm fucking love you.`;
+      i'm fucking love you, elvern, evennie, dede, sayangkuu.`;
       musik = `musik.mp3`;
       nomorWhatsapp = ``;
       idTelegram = ``;
@@ -30,4 +32,5 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
     </script>
   </body>
 </html>
+
 
