--- a/fromsarda/index.html
+++ b/fromsarda/index.html
@@ -23,7 +23,10 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
       thank you for always choose me even in your bad way.
       when i see flowers, it reminds me of you. you're my pretty-side n my best thing i ever had.
       i love you in every universe 
-      i'm fucking love you, elvern, evennie, dede, sayangkuu.`;
+      i'm fucking love you, elvern, evennie, dede, sayangkuu.
+      lagi lagi masih belum bisa ngasih yang terbaik untuk kamu...
+      but i hope u like it.
+      muah`;
       musik = `musik.mp3`;
       nomorWhatsapp = ``;
       idTelegram = ``;
@@ -32,5 +35,6 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
     </script>
   </body>
 </html>
+
 
 
