--- a/fromsarda/index.html
+++ b/fromsarda/index.html
@@ -24,17 +24,18 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
       when i see flowers, it reminds me of you. you're my pretty-side n my best thing i ever had.
       i love you in every universe 
       i'm fucking love you, elvern, evennie, dede, sayangkuu.
-      lagi lagi masih belum bisa ngasih yang terbaik untuk kamu...
+      lagi lagi masih belum bisa ngasih yang terbaik untuk kamu sayang,
       but i hope u like it.
       muah`;
       musik = `musik.mp3`;
       nomorWhatsapp = ``;
-      idTelegram = ``;
+      idTelegram = `@vGrossfades`;
 
       DekaTutorial(ucapan, musik, nomorWhatsapp, idTelegram);
     </script>
   </body>
 </html>
+
 
 
 
